# airlock

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  PROGRESS.md  PROJECT-PLAN.md  PROJECT_PLAN.md  README.md  bwrap-userns-restrict.apparmor  config.local.yaml.example  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  sitecustomize.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  implementer.md
.claude/hooks/: ensure-spacy-after-sync.sh  session-start.sh
.github/workflows/: ci.yml  release.yml
.wake/shared/: coreyt.jsonl
agents/: config-deployment.md  guardrail-author.md  gui-architect.md  litellm-expert.md  logging-audit.md  rewrite-engine.md  testing.md  tui-architect.md
agents/.aural/: .session_reads  blocked.md  constraints.md  decisions.md  events.db  knowledge.md  projection.md  rejected.md  stack.json
airlock/: __init__.py  capability.py  client_identity.py  datastore.py  docs.py  gemini_interface.py  guardrail_overrides.py  health.py  litellm_adapter.py  models_catalog.py  models_seam.py  proxy.py  proxy_bootstrap.py  proxy_errors.py  reasoning_effort.py  sidecar.py  text_extract.py  transparency.py
airlock/admin/: http.py  policy.py  tokens.py
airlock/advisor/: agent.py  audit.py  model_select.py  prompts.py  proposals.py  tools.py
airlock/api/: queries.py
airlock/batch/: __init__.py  aistudio.py  backend.py  gateway.py  middleware.py  mistral.py  runtime.py  scan.py  store.py  vllm.py  worker.py
airlock/callbacks/: enterprise_logger.py  fathom_logger.py  metrics.py  model_override_headers.py  projections.py  recorder.py  request_event.py  s3_logger.py  sql_logger.py  tracing.py
airlock/cli/: admin_cmd.py  advise_cmd.py  config_cmd.py  dogfood_cmd.py  hooks_cmd.py  init_cmd.py  install_service_cmd.py  main.py  post_cmd.py  status_cmd.py
airlock/fast/: __init__.py  _state_core.py  _state_mcp.py  _state_persistence.py  _state_spend.py  admission.py  circuit_breaker.py  guardian.py  model_alias.py  monitor.py  priority.py  ratelimit_headers.py  router.py  settings.py  state.py  threat_detector.py
airlock/guardrails/: __init__.py  enforcer.py  enhanced_interceptor.py  extract.py  keyword_guard.py  local_vllm_router.py  mcp_tool_guard.py  observer.py  orchestrator.py  overrides.py  pii_guard.py  reasoning_stripper.py  response_scanner.py  schemas.py  semantic.py
airlock/hooks/: __init__.py  _common.py  post_tool.py  pre_submit.py  pre_tool.py  session_start.py
airlock/mcp_servers/: newscatcher_server.py
airlock/providers/: enhanced_passthrough.py  tavily_provider.py
airlock/slow/: __init__.py  analyzer.py  cli.py  tuner.py
airlock/tui/: __init__.py  admin_client.py  alert_engine.py  app.py  mcp_manager.py  param_schemas.py  proxy_manager.py
deploy/: airlock.service
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml
dev/: accessing-experiments.md  agent-harness-bootstrap-prompt.md  agent-harness-orchestrator-prompt.md  agent-harness-reference.md  agent-harness-runbook.md  aistudio-batch-e2e-test-plan.md  architecture-overview.txt  architecture.md  batch-guardrail-toggles-considerations.md  batch-tdd-test-plan.md  design-aistudio-gemini-batch.md  design-batch-content-scan.md  design-fathom-storage-model.md  design-gpt-5.6-model-family.md  design-note-enhanced-provider.md  design-note-pii-rehydration.md  design-unified-batch-gateway.md  dogfooding.md  fathomdb-batch-resolution.md  feature-admin-advisor.md  feature-dynamic-processing.md  feature-guardrails-deterministic-control-loops.md  feature-harness-test-plan.md  guardrails-mechanisms-exploration.md  impl-plan-pii-rehydration.md  mistral-batch-findings.md  plan-fathom-storage-implementation.md  presidio-think-slow-investigation.md  requirements.md  test-plan-pii-rehydration.md  tui-design.md  tui-flow-screen.md  update-docs.md  user-needs.md  vertex-gemini-batch-setup.md
dev/notes/: 0.5.0-OBS-accounting-design.md  0.5.0-OBS-core-design.md  0.5.0-OBS-headers-design.md  0.5.0-OBS-ledger-design.md  0.5.0-OBS-log-design.md  0.5.0-OBS-metrics-tui-design.md  0.5.0-OBS-served-design.md  0.5.1-SET-loader-design.md  0.5.1-SET-unify-design.md  0.5.1-SET-warnratio-design.md  0.5.1-STORE-seam-design.md  0.5.2-CAP-modelinfo-design.md  0.5.2-CAP-v1models-design.md  0.5.2-COMPAT-tests-design.md  0.5.2-DOCS-design.md  0.5.2-NAME-aliases-design.md  0.5.3-ACL-design.md  0.5.3-DECOUPLE-design.md  0.5.3-LATENCY-design.md  0.5.3-RACE-design.md  0.5.4-EVENT-design.md  0.5.4-MIGRATE-entfathom-cutover-design.md  0.5.4-MIGRATE-entfathom-project-design.md  (+28 more)
docs/: changelog.md  index.md  operations.md  troubleshooting.md
scripts/: agent-permission-canary.sh  benchmark_fathomdb.py  check-version-consistency.py  check-worktree-base.sh  preflight.sh  set-version.sh  setup-dev.sh  setup.sh  verify-release-gates.py
tests/: conftest.py  test_0_5_2_capability_compat.py  test_admin_http.py  test_admin_state.py  test_admin_tokens.py  test_admission.py  test_advisor_agent.py  test_advisor_audit.py  test_advisor_model_select.py  test_advisor_prompts.py  test_advisor_proposals.py  test_advisor_tools.py  test_aistudio_batch_e2e.py  test_batch_file_state.py  test_batch_gateway.py  test_batch_gateway_integration.py  test_batch_middleware.py  test_batch_scan.py  test_batch_vllm_backend.py  test_batch_vllm_executor.py  test_batch_vllm_translation.py  test_capability.py  test_circuit_breaker.py  test_cli_advise.py  test_cli_hooks.py  test_cli_init.py  test_cli_main.py  test_cli_post.py  test_cli_status.py  test_client_identity.py  test_config_consistency.py  test_cross_sink_equivalence.py  test_docs.py  test_dogfood.py  test_drop_params_detection.py  test_enforcer.py  test_enhanced_interceptor.py  test_enhanced_passthrough.py  test_enterprise_logger.py  test_extract.py  (+71 more)
(+238 files in other folders)
