[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "airlock"
version = "0.1.0"
description = "Enterprise LLM proxy built on LiteLLM — logging, guardrails, and unified access for AI coding tools."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy]>=1.55.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34.0"]
sql = ["sqlalchemy>=2.0.0"]

[project.scripts]
airlock = "airlock.proxy:main"
airlock-analyze = "airlock.slow.cli:main"
