[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock"
version = "0.1.0"
description = "Enterprise LLM proxy built on LiteLLM — logging, guardrails, and unified access for AI coding tools."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy]>=1.55.0,!=1.82.7,!=1.82.8",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "textual>=6.2.1",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34.0"]
sql = ["sqlalchemy>=2.0.0"]
metrics = ["prometheus-client>=0.20.0"]
tui = ["textual>=0.40.0"]
search = ["tavily-python>=0.5.0", "newscatcher-catchall-sdk>=1.0.0"]
tracing = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:xdist -p no:hypothesis -p no:Faker -p no:dash"
markers = [
    "harness: Feature test harness (integration)",
    "live: Requires running proxy with real API keys",
]

[tool.setuptools.packages.find]
include = ["airlock*"]

[project.scripts]
airlock = "airlock.cli.main:main"
airlock-analyze = "airlock.slow.cli:main"

[tool.setuptools.package-data]
"airlock.cli.templates" = ["*.yaml", "dot_env"]
