[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock-llm"
version = "0.3.1"
description = "Enterprise LLM proxy built on LiteLLM — logging, guardrails, and unified access for AI coding tools."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Corey Thompson" }]
keywords = [
    "llm",
    "proxy",
    "litellm",
    "guardrails",
    "pii",
    "observability",
    "ai",
    "openai",
    "anthropic",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    "litellm[proxy]>=1.83.4,!=1.82.7,!=1.82.8,<2",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "textual>=6.2.1",
]

[project.optional-dependencies]
db = ["fathomdb>=0.3.1"]
s3 = ["boto3>=1.34.0"]
sql = ["sqlalchemy>=2.0.0"]
metrics = ["prometheus-client>=0.20.0"]
tui = ["textual>=0.40.0"]
search = ["tavily-python>=0.5.0", "newscatcher-catchall-sdk>=1.0.0"]
vertex = ["google-auth>=2.0.0"]  # required by litellm vertex_ai (token minting + GCS batch staging)
aistudio = ["google-genai>=1.0.0"]  # AI Studio Gemini batch via the Airlock Batch Gateway (lazy-imported)
mistral = ["mistralai>=1.0.0"]  # Mistral batch via the Airlock Batch Gateway (lazy-imported)
tracing = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fastapi>=0.100.0",
    "prometheus-client>=0.20.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/coreyt/airlock"
Repository = "https://github.com/coreyt/airlock"
Issues = "https://github.com/coreyt/airlock/issues"
Changelog = "https://github.com/coreyt/airlock/blob/main/CHANGELOG.md"

[tool.ruff.lint.per-file-ignores]
# Optional / conditional imports must follow runtime gates.
"airlock/callbacks/metrics.py" = ["E402"]    # prometheus_client import after try/except
"airlock/callbacks/s3_logger.py" = ["E402"]  # boto3 import after try/except
"airlock/callbacks/sql_logger.py" = ["E402"] # sqlalchemy import after try/except
"airlock/callbacks/tracing.py" = ["E402"]    # opentelemetry import after try/except
"airlock/fast/monitor.py" = ["E402"]         # _infer_provider isolated to break import cycle
"airlock/guardrails/semantic.py" = ["E402"]  # litellm import after sys.modules.setdefault shim

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:xdist -p no:hypothesis -p no:Faker -p no:dash -m 'not stress'"
markers = [
    "harness: Feature test harness (integration)",
    "live: Requires running proxy with real API keys",
    "stress: Concurrency/stress tests excluded from default run",
]

[tool.setuptools.packages.find]
include = ["airlock*"]

[project.scripts]
airlock = "airlock.cli.main:main"
airlock-analyze = "airlock.slow.cli:main"

[tool.setuptools.package-data]
"airlock.cli.templates" = ["*.yaml", "dot_env"]
